// Copyright © 2018 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/TheThingsNetwork/ttn/api/identifiers.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

package ttn.v3;

option go_package = "github.com/TheThingsNetwork/ttn/pkg/ttnpb";

// RxMetadata contains metadata for a received message. Each antenna that receives
// a message corresponds to one RxMetadata.
message RxMetadata {
  // gateway_id is the ID of the gateway that received the message
  GatewayIdentifiers gateway_id = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];

  // Index of the antenna that received the message
  uint32 antenna_index = 2;

  // Gateway's internal timestamp when the Rx finished (nanoseconds)
  // NOTE: most gateways use microsecond timestamps, so conversion may be needed
  uint64 timestamp = 3;

  // Gateway's internal fine timestamp when the Rx finished (nanoseconds), encrypted with an AES key.
  string encrypted_fine_timestamp = 4;

  // Gateway's internal fine timestamp when the Rx finished (nanoseconds), decrypted.
  uint64 fine_timestamp_value = 5;

  // Real time
  google.protobuf.Timestamp time = 6 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  // Received signal strength in dBm
  float rssi = 7 [(gogoproto.customname) = "RSSI"];

  // Received channel power in dBm
  float  channel_rssi = 8 [(gogoproto.customname) = "ChannelRSSI"];

  // Standard deviation of the RSSI
  float rssi_standard_deviation = 9 [(gogoproto.customname) = "RSSIStandardDeviation"];

  // Signal-to-noise-ratio in dB
  float snr = 10 [(gogoproto.customname) = "SNR"];

  // Frequency offset (Hz)
  int64 frequency_offset = 11;

  // Location of the antenna
  Location location = 12;

  // ID of the AES key the fine timestamps were encrypted with
  string aes_key_id = 13 [(gogoproto.customname) = "AESKeyID"];

  // Advanced metadata fields
  // - can be used for advanced information or experimental features that are not yet formally defined in the API
  // - field names are written in snake_case
  google.protobuf.Struct advanced = 99;
}

// TxMetadata contains metadata for a to-be-transmitted message.
// It contains gateway-specific fields that are not in the TxSettings message
message TxMetadata {
  // gateway_id is the ID of the gateway that received the message
  GatewayIdentifiers gateway_id = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];

  // Gateway's internal timestamp when the Tx should start (nanoseconds)
  // NOTE: most gateways use microsecond timestamps, so conversion may be needed
  uint64 timestamp = 2;

  // Real time
  google.protobuf.Timestamp time = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  // Send a CRC in the packet. This should only be used for testing purposes, as downlinks with CRCs are not LoRaWAN compliant.
  bool enable_crc = 4 [(gogoproto.customname) = "EnableCRC"];

  // Invert polarity for this downlink. This field should be true for LoRaWAN downlinks.
  bool invert_polarity = 5;

  // Advanced metadata fields
  // - can be used for advanced information or experimental features that are not yet formally defined in the API
  // - field names are written in snake_case
  google.protobuf.Struct advanced = 99;
}

// Location of an object
message Location {
  // The North–South position (degrees; -90 to +90), where 0 is the equator, North pole is positive, South pole is negative
  float latitude = 1;

  // The East-West position (degrees; -180 to +180), where 0 is the Prime Meridian (Greenwich), East is positive , West is negative
  float longitude = 2;

  // The altitude (meters), where 0 is the mean sea level
  int32 altitude = 3;

  // The accuracy of the location (meters)
  int32 accuracy = 4;

  // Source of the location information
  LocationSource source = 5;
}

// LocationSource indicates the source of a Location
enum LocationSource {
  option (gogoproto.goproto_enum_prefix) = false;
  // The source of the location is not known or not set
  SOURCE_UNKNOWN               = 0;
  // The location is determined by GPS
  SOURCE_GPS                   = 1;
  // The location is set in and updated from a registry
  SOURCE_REGISTRY              = 3;
  // The location is estimated with IP geolocation
  SOURCE_IP_GEOLOCATION        = 4;
  // The location is estimated with WiFi RSSI geolocation
  SOURCE_WIFI_RSSI_GEOLOCATION = 5;
  // The location is estimated with BT/BLE RSSI geolocation
  SOURCE_BT_RSSI_GEOLOCATION   = 6;
  // The location is estimated with LoRa RSSI geolocation
  SOURCE_LORA_RSSI_GEOLOCATION = 7;
  // The location is estimated with LoRa TDOA geolocation
  SOURCE_LORA_TDOA_GEOLOCATION = 8;
  // The location is estimated by a combination of geolocation sources
  SOURCE_COMBINED_GEOLOCATION  = 9;
  // More estimation methods can be added
}
